updated bmc files and added example citation

--- a/bmc/bmc_article.tex
+++ b/bmc/bmc_article.tex
@@ -196,8 +196,8 @@ Text for this section.
 %% for details on how to create sub-sections%%
 %%                                          %%
 %% use \cite{...} to cite references        %%
-%%  \cite{koon} and                         %%
-%%  \cite{oreg,khar,zvai,xjon,schn,pond}    %%
+\cite{koon} and                         %%
+\cite{oreg,khar,zvai,xjon,schn,pond}    %%
 %%  \nocite{smith,marg,hunn,advi,koha,mouse}%%
 %%                                          %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
