added old genetics style

--- a/plos/plos_template.tex
+++ b/plos/plos_template.tex
@@ -136,16 +136,16 @@ Text. Text. Text. Text. Text. Text. Text. Text.  \cite{vanPassel2006, Moreno2008
 
 
 \section*{Tables}
-%\begin{table}[!ht]
-%\caption{
-%\bf{Table title}}
-%\begin{tabular}{|c|c|c|}
-%table information
-%\end{tabular}
-%\begin{flushleft}Table caption
-%\end{flushleft}
-%\label{tab:label}
-% \end{table}
+\begin{table}[!ht]
+\caption{
+\bf{Table title}}
+\begin{tabular}{|c|c|c|}
+table information
+\end{tabular}
+\begin{flushleft}Table caption
+\end{flushleft}
+\label{tab:label}
+\end{table}
 
 \end{document}
 
